cros: Notify CloudExternalDataPolicyObserver when policy doesn't exist

When the policy doesn't exist, an "OnExternalDataCleared" call could
be fired to notify clients, in case they still keep the old data from
a previous policy. It should be a no-op for clients that do not store
policy data.

Bug: 889108
Change-Id: I6061f3be1b650f026ea88f8d353b710fb0b3b16d
Reviewed-on: https://chromium-review.googlesource.com/c/1266695
Reviewed-by: Sean Kau <skau@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Maksim Ivanov <emaxx@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600430}
Former-commit-id: 4e7690999538a6f27ddfed2d67c113470db82036