chrome/browser/chromeos/policy/cloud_external_data_policy_observer_unittest.cc
@@ -111,6 +111,7 @@ class CloudExternalDataPolicyObserverTest
                              std::unique_ptr<std::string> data) override;
 
   void CreateObserver();
+  void RemoveObserver();
 
   void ClearObservations();
 
@@ -251,6 +252,10 @@ void CloudExternalDataPolicyObserverTest::CreateObserver() {
       cros_settings_.get(), device_local_account_policy_service_.get(),
       key::kUserAvatarImage, this));
   observer_->Init();
+}
+
+void CloudExternalDataPolicyObserverTest::RemoveObserver() {
+  observer_.reset();
 }
 
 void CloudExternalDataPolicyObserverTest::ClearObservations() {
@@ -401,7 +406,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, set_calls_.front());
   ClearObservations();
 
@@ -411,7 +416,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
 
   EXPECT_TRUE(set_calls_.empty());
   EXPECT_TRUE(cleared_calls_.empty());
-  ASSERT_EQ(1u, fetched_calls_.size());
+  EXPECT_EQ(1u, fetched_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, fetched_calls_.front().first);
   EXPECT_EQ(avatar_policy_1_data_, fetched_calls_.front().second);
   ClearObservations();
@@ -436,7 +441,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, set_calls_.front());
   ClearObservations();
 
@@ -504,7 +509,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, set_calls_.front());
   ClearObservations();
 
@@ -515,7 +520,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
 
   EXPECT_TRUE(set_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, cleared_calls_.size());
+  EXPECT_EQ(1u, cleared_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, cleared_calls_.front());
   ClearObservations();
 
@@ -548,7 +553,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, set_calls_.front());
   ClearObservations();
 
@@ -558,7 +563,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
 
   EXPECT_TRUE(set_calls_.empty());
   EXPECT_TRUE(cleared_calls_.empty());
-  ASSERT_EQ(1u, fetched_calls_.size());
+  EXPECT_EQ(1u, fetched_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, fetched_calls_.front().first);
   EXPECT_EQ(avatar_policy_1_data_, fetched_calls_.front().second);
   ClearObservations();
@@ -585,7 +590,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, ExistingDeviceLocalAccountSetSet) {
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, set_calls_.front());
   ClearObservations();
 
@@ -596,7 +601,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, ExistingDeviceLocalAccountSetSet) {
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, set_calls_.front());
   ClearObservations();
 
@@ -607,7 +612,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, ExistingDeviceLocalAccountSetSet) {
 
   EXPECT_TRUE(set_calls_.empty());
   EXPECT_TRUE(cleared_calls_.empty());
-  ASSERT_EQ(1u, fetched_calls_.size());
+  EXPECT_EQ(1u, fetched_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, fetched_calls_.front().first);
   EXPECT_EQ(avatar_policy_2_data_, fetched_calls_.front().second);
   ClearObservations();
@@ -616,7 +621,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, ExistingDeviceLocalAccountSetSet) {
 }
 
 // Verifies that when the external data reference for a device-local account is
-// initially not set, no notifications are emitted during login into the
+// initially not set, a 'cleared' notification is emitted during login into the
 // account. Further verifies that when the external data reference is then set,
 // a corresponding notification is emitted only once and a fetch is started.
 // Also verifies that when the fetch eventually succeeds, a notification
@@ -635,7 +640,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
   LogInAsDeviceLocalAccount(AccountId::FromUserEmail(kDeviceLocalAccount));
 
   EXPECT_TRUE(set_calls_.empty());
-  EXPECT_TRUE(cleared_calls_.empty());
+  EXPECT_EQ(1u, cleared_calls_.size());
   EXPECT_TRUE(fetched_calls_.empty());
   ClearObservations();
 
@@ -644,7 +649,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, set_calls_.front());
   ClearObservations();
 
@@ -654,7 +659,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
 
   EXPECT_TRUE(set_calls_.empty());
   EXPECT_TRUE(cleared_calls_.empty());
-  ASSERT_EQ(1u, fetched_calls_.size());
+  EXPECT_EQ(1u, fetched_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, fetched_calls_.front().first);
   EXPECT_EQ(avatar_policy_1_data_, fetched_calls_.front().second);
   ClearObservations();
@@ -712,7 +717,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, set_calls_.front());
   ClearObservations();
 
@@ -722,7 +727,7 @@ TEST_F(CloudExternalDataPolicyObserverTest,
 
   EXPECT_TRUE(set_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, cleared_calls_.size());
+  EXPECT_EQ(1u, cleared_calls_.size());
   EXPECT_EQ(device_local_account_user_id_, cleared_calls_.front());
   ClearObservations();
 
@@ -746,7 +751,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, RegularUserFetchSuccess) {
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(kRegularUserID, set_calls_.front());
   ClearObservations();
 
@@ -757,16 +762,16 @@ TEST_F(CloudExternalDataPolicyObserverTest, RegularUserFetchSuccess) {
 
   EXPECT_TRUE(set_calls_.empty());
   EXPECT_TRUE(cleared_calls_.empty());
-  ASSERT_EQ(1u, fetched_calls_.size());
+  EXPECT_EQ(1u, fetched_calls_.size());
   EXPECT_EQ(kRegularUserID, fetched_calls_.front().first);
   EXPECT_EQ(avatar_policy_1_data_, fetched_calls_.front().second);
   ClearObservations();
 }
 
 // Verifies that when the external data reference for a regular user is not set
-// while the user is logging in, no notifications are emitted. Further verifies
-// that when the external data reference is then cleared (which is a no-op),
-// again, no notifications are emitted.
+// while the user is logging in, a 'cleared' notifications is emitted. Further
+// verifies that when the external data reference is then cleared (which is a
+// no-op), no notifications are emitted.
 TEST_F(CloudExternalDataPolicyObserverTest, RegularUserClearUnset) {
   CreateObserver();
 
@@ -775,7 +780,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, RegularUserClearUnset) {
   LogInAsRegularUser();
 
   EXPECT_TRUE(set_calls_.empty());
-  EXPECT_TRUE(cleared_calls_.empty());
+  EXPECT_EQ(1u, cleared_calls_.size());
   EXPECT_TRUE(fetched_calls_.empty());
   ClearObservations();
 
@@ -808,7 +813,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, RegularUserClearSet) {
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(kRegularUserID, set_calls_.front());
   ClearObservations();
 
@@ -819,15 +824,14 @@ TEST_F(CloudExternalDataPolicyObserverTest, RegularUserClearSet) {
 
   EXPECT_TRUE(set_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, cleared_calls_.size());
+  EXPECT_EQ(1u, cleared_calls_.size());
   EXPECT_EQ(kRegularUserID, cleared_calls_.front());
   ClearObservations();
 }
 
-
 // Verifies that when the external data reference for a regular user is not set
-// while the user is logging in, no notifications are emitted. Further verifies
-// that when the external data reference is then set, a corresponding
+// while the user is logging in, a 'cleared' notifications is emitted. Further
+// verifies that when the external data reference is then set, a corresponding
 // notification is emitted and a fetch is started. Also verifies that when the
 // fetch eventually succeeds, a notification containing the external data is
 // emitted.
@@ -839,7 +843,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, RegularUserSetUnset) {
   LogInAsRegularUser();
 
   EXPECT_TRUE(set_calls_.empty());
-  EXPECT_TRUE(cleared_calls_.empty());
+  EXPECT_EQ(1u, cleared_calls_.size());
   EXPECT_TRUE(fetched_calls_.empty());
   ClearObservations();
 
@@ -852,7 +856,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, RegularUserSetUnset) {
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(kRegularUserID, set_calls_.front());
   ClearObservations();
 
@@ -863,7 +867,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, RegularUserSetUnset) {
 
   EXPECT_TRUE(set_calls_.empty());
   EXPECT_TRUE(cleared_calls_.empty());
-  ASSERT_EQ(1u, fetched_calls_.size());
+  EXPECT_EQ(1u, fetched_calls_.size());
   EXPECT_EQ(kRegularUserID, fetched_calls_.front().first);
   EXPECT_EQ(avatar_policy_1_data_, fetched_calls_.front().second);
   ClearObservations();
@@ -888,7 +892,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, RegularUserSetSet) {
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(kRegularUserID, set_calls_.front());
   ClearObservations();
 
@@ -901,7 +905,7 @@ TEST_F(CloudExternalDataPolicyObserverTest, RegularUserSetSet) {
 
   EXPECT_TRUE(cleared_calls_.empty());
   EXPECT_TRUE(fetched_calls_.empty());
-  ASSERT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(1u, set_calls_.size());
   EXPECT_EQ(kRegularUserID, set_calls_.front());
   ClearObservations();
 
@@ -912,9 +916,52 @@ TEST_F(CloudExternalDataPolicyObserverTest, RegularUserSetSet) {
 
   EXPECT_TRUE(set_calls_.empty());
   EXPECT_TRUE(cleared_calls_.empty());
-  ASSERT_EQ(1u, fetched_calls_.size());
+  EXPECT_EQ(1u, fetched_calls_.size());
   EXPECT_EQ(kRegularUserID, fetched_calls_.front().first);
   EXPECT_EQ(avatar_policy_2_data_, fetched_calls_.front().second);
+  ClearObservations();
+}
+
+// Tests that if external data reference for a regular user was cleared when
+// the user logged out, the notification will still be emitted when the user
+// logs back in.
+TEST_F(CloudExternalDataPolicyObserverTest, RegularUserLogoutTest) {
+  SetRegularUserAvatarPolicy(avatar_policy_1_);
+  CreateObserver();
+
+  EXPECT_CALL(external_data_manager_, Fetch(key::kUserAvatarImage, _))
+      .Times(1)
+      .WillOnce(SaveArg<1>(&fetch_callback_));
+
+  LogInAsRegularUser();
+
+  EXPECT_TRUE(cleared_calls_.empty());
+  EXPECT_TRUE(fetched_calls_.empty());
+  EXPECT_EQ(1u, set_calls_.size());
+  EXPECT_EQ(kRegularUserID, set_calls_.front());
+  ClearObservations();
+
+  // Now simulate log out the user. Simply reset the external data policy
+  // observer.
+  RemoveObserver();
+
+  Mock::VerifyAndClear(&external_data_manager_);
+  EXPECT_CALL(external_data_manager_, Fetch(key::kUserAvatarImage, _)).Times(0);
+
+  SetRegularUserAvatarPolicy("");
+
+  // Now simulate log back the user.
+  CreateObserver();
+  content::NotificationService::current()->Notify(
+      chrome::NOTIFICATION_LOGIN_USER_PROFILE_PREPARED,
+      content::NotificationService::AllSources(),
+      content::Details<Profile>(profile_.get()));
+
+  // Test that clear notification is emitted.
+  EXPECT_TRUE(set_calls_.empty());
+  EXPECT_TRUE(fetched_calls_.empty());
+  EXPECT_EQ(1u, cleared_calls_.size());
+  EXPECT_EQ(kRegularUserID, cleared_calls_.front());
   ClearObservations();
 }
 
